<!--

Copyright 2016 InterDigital Communications, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
You may not use this file except in compliance with the License.

You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.

See the License for the specific language governing permissions and
limitations under the License.

-->
<resources>
    <string name="title_activity_maps">oneTRANSPORT</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_default_host_name">dev.onetransport.uk.net</string>
    <string name="pref_default_cse_name">ONETCSE01</string>
    <string name="pref_default_user_ae_name">C-Y249U2FtcGxlTWFwQXBwMixvdT1yb290</string>
    <string name="pref_default_bearer_token">012vFwgnyuC5dFQ6</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="cars_per_min">%1$d cars/min</string>
    <string name="kph">%1$dkph</string>
    <string name="queue_severity">Queue severity: %1$d</string>
    <string name="average_speed">Average speed: %1$d</string>
    <string name="travel_time">Travel time: %1$d:%2$d</string>

    <string name="space">SPACE</string>
    <string name="full">FULL</string>
    <string name="worldsensing">Worldsensing</string>

    <string name="provider_authority">com.interdigital.android.samplemapdataapp.provider</string>
    <string name="sync_account_type">samplemapdataapp.android.interdigital.com</string>

    <string name="variable_message_signs">Variable message signs</string>
    <string name="car_parks">Car parks</string>
    <string name="events">Events</string>
    <string name="traffic_flow">Traffic flow</string>
    <string name="traffic_queue">Traffic queue</string>
    <string name="traffic_scoot">Traffic Scoot</string>
    <string name="traffic_speed">Traffic speed</string>
    <string name="traffic_travel_time">Traffic travel time</string>
    <string name="roadworks">Roadworks</string>

    <string name="buckinghamshire">Buckinghamshire</string>
    <string name="hertfordshire">Hertfordshire</string>
    <string name="northamptonshire">Northamptonshire</string>
    <string name="oxfordshire">Oxfordshire</string>
    <string name="clearview_silverstone">Clearview Silverstone</string>
    <string name="parking">Parking</string>
    <string name="bitcarrier_silverstone">BitCarrier Silverstone</string>
    <string name="road_network">Road network</string>
    <string name="fastprk">Fastprk</string>

    <string name="bitcarrier_base_url">https://dev.onetransport.uk.net/</string>
    <string name="bitcarrier_cse_base_url">https://dev.onetransport.uk.net/ONETCSE01/</string>

    <string name="clearview_base_url">https://dev.onetransport.uk.net/</string>
    <string name="clearview_cse_base_url">https://dev.onetransport.uk.net/ONETCSE01/</string>

</resources>
