<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            tools:context="com.interdigital.android.samplemapdataapp.MapsActivity"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="-8dp"
            android:indeterminate="true"
            android:visibility="invisible"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/left_drawer"
        android:layout_width="266dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/overlay_chooser"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="266dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/drawer_header"/>

            <TextView
                android:layout_width="266dp"
                android:layout_height="48dp"
                android:background="#000000"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:singleLine="true"
                android:text="@string/buckinghamshire"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/vms_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:checked="true"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"
                    android:alpha="222"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/variable_message_signs"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/car_park_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:checked="true"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"
                    android:alpha="222"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/car_parks"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/traffic_flow_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:checked="true"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"
                    android:alpha="222"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/traffic_flow"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/road_works_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:checked="true"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"
                    android:alpha="222"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/road_works"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/demo_kit_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:checked="true"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"
                    android:alpha="222"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/fastprk"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <TextView
                android:layout_width="266dp"
                android:layout_height="48dp"
                android:background="#fedb00"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:singleLine="true"
                android:text="@string/clearview_silverstone"
                android:textColor="#4b384c"
                android:textSize="16sp"/>

            <RelativeLayout
                android:layout_width="266dp"
                android:layout_height="48dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/clearview_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:checked="true"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"
                    android:alpha="222"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/parking"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <TextView
                android:layout_width="266dp"
                android:layout_height="48dp"
                android:background="#3c9ad2"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:singleLine="true"
                android:text="@string/bitcarrier_silverstone"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/bitcarrier_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:checked="true"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"
                    android:alpha="222"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/road_network"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.DrawerLayout>